--- a/index.html
+++ b/index.html
@@ -6,15 +6,10 @@
     <link rel="stylesheet" href="asset/css/output.css">
     <title>Document</title>
 </head>
-<body>
+<body class="max-w-7xl ">
 
-    <header class="w-full flex flex-row justify-between  items-center p-5">
+    <header class="w-full flex flex-row justify-between  items-center p-5 border">
 
-
-        
-
-
-        
         <!-- Logo & Toggle -->
          <div class="flex flex-row items-center gap-5">
 
@@ -51,14 +46,19 @@
 
            <div class="flex flex-wrap gap-3">
 
+            <!-- Logo search uniquement en mobile -->
+
             <svg xmlns="http://www.w3.org/2000/svg"     fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                 <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" class="md:hidden" />
             </svg>
 
+            <!-- Logo panier -->
 
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
             </svg>
+
+            <!-- Logo se connecter -->
 
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
