--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="asset/css/output.css">
     <title>Document</title>
 </head>
-<body class="max-w-7xl ">
+<body class="max-w-7xl flex flex-row justify-center">
 
     <header class="w-full flex flex-row justify-between  items-center p-5 border">
 
