--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
             <!-- Logo -->
-            <h2 class="text-black text-[32px] font-extrabold ">SHOP.CO</h2>
+            <h2 class="text-black text-[32px] font-extrabold ">SHOP.COPMPMP</h2>
          </div>
 
          <!-- NavMenu -->
